# repo-pulse

./: .gitignore  LICENSE  README.md  pyproject.toml  repo_pulse.py
.github/: copilot-instructions.md
repo_pulse.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
